fixed overflowing issues and fixed error for contacts

--- a/react-app/src/components/Dashboard/Announcement/Announcement.css
+++ b/react-app/src/components/Dashboard/Announcement/Announcement.css
@@ -71,8 +71,11 @@ body {
 .active-announcement{
     background-color: #A8DADC;
 }
-
+.announcement-title-container{
+}
 .announcement-title{
+    width: 100%;
+    overflow-wrap: break-word;
     font-size: max(1vw, 16px);
 }
 
